[package]
name = "mindlaunch"
version = "0.1.0"
authors = ["140bpmdubstep <laineprikol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.7.14"
font-kit = "0.5.0"
minifb = "0.16"
ureq = "1.0"
parking_lot = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.28"
nfd = "0.0.4"